# sasya-arogya-mcp

./: .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  app.py  demo_remote.py  docker-compose.yml  farmer.py  main.py  mcp_client.py  mcp_http_client.py  mcp_http_server.py  mcp_responses.json  mcp_server.py  mcp_server_simple.py  pyproject.toml  requirements.txt  telemetry.py
clients/: mcp_client.py
main/: app.py  mcp_server.py
main/services/: insurance_advisor.py
resources/: crop_data.csv  insurance_companies.csv  vendors.csv
services/: crop_premium.py  insurance_advisor.py  insurance_certificate.py  insurance_companies.py  pdf_generator.py  shared_utils.py
templates/: insurance_template.html
