[project]
name = "sasya-arogya-mcp"
version = "0.1.0"
description = "MCP/FastAPI based Agent for Sasya Arogya"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "jinja2>=3.1.6",
    "pandas>=2.3.2",
    "uvicorn>=0.37.0",
    "reportlab>=4.0.9",
    "mcp>=1.14.1",
    "rpds-py>=0.27.1",
    "aiohttp>=3.12.15",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-requests>=0.58b0",
    "opentelemetry-instrumentation-logging>=0.58b0",
    "opentelemetry-instrumentation-asyncio>=0.58b0",
    "prometheus-client>=0.23.1",
    "opentelemetry-exporter-prometheus>=0.58b0",
]
